# openmodelzoo_demo

./: CMakeLists.txt  README.md  models.lst
include/: config.h  detector.h  flags_handler.h  pool.h  worker.h
src/: detector.cpp  flags_handler.cpp  main.cpp  pool.cpp  worker.cpp
